--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -19,6 +19,7 @@ jobs:
           channelId: live
           projectId: access2agriculture
           entryPoint: ./a2a
+          target: app
 
   admin_build_and_deploy:
     runs-on: ubuntu-latest
@@ -32,3 +33,4 @@ jobs:
           channelId: live
           projectId: access2agriculture
           entryPoint: ./admin
+          target: admin
