--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -4,20 +4,6 @@
 name: Deploy to Firebase Hosting on PR
 'on': pull_request
 jobs:
-  build_and_preview:
-    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cd a2a && yarn install --frozen-lockfile && yarn run build
-      - uses: FirebaseExtended/action-hosting-deploy@v0
-        with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACCESS2AGRICULTURE }}'
-          projectId: access2agriculture
-          entryPoint: ./a2a
-          target: app
-
   admin_build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
@@ -31,3 +17,18 @@ jobs:
           projectId: access2agriculture
           entryPoint: ./admin
           target: admin
+
+  build_and_preview:
+    if: '${{ (github.event.pull_request.head.repo.full_name == github.repository) && always() }}'
+    runs-on: ubuntu-latest
+    needs: admin_build_and_preview
+    steps:
+      - uses: actions/checkout@v2
+      - run: cd a2a && yarn install --frozen-lockfile && yarn run build
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACCESS2AGRICULTURE }}'
+          projectId: access2agriculture
+          entryPoint: ./a2a
+          target: app
