--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -12,16 +12,14 @@ jobs:
       - run: cd admin && yarn install --frozen-lockfile && yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
-          repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACCESS2AGRICULTURE }}'
           projectId: access2agriculture
           entryPoint: ./admin
           target: admin
 
   build_and_preview:
-    if: '${{ (github.event.pull_request.head.repo.full_name == github.repository) && always() }}'
+    if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
     runs-on: ubuntu-latest
-    needs: admin_build_and_preview
     steps:
       - uses: actions/checkout@v2
       - run: cd a2a && yarn install --frozen-lockfile && yarn run build
