--- a/a2a/package.json
+++ b/a2a/package.json
@@ -11,8 +11,9 @@
     "@mapbox/mapbox-gl-geocoder": "^4.7.1",
     "@studiometa/vue-mapbox-gl": "^1.4.7",
     "core-js": "^3.6.5",
-    "mapbox-gl": "^1.13.1",
     "firebase": "^8.6.7",
+    "geofire-common": "^5.2.0",
+    "mapbox-gl": "^1.13.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
