--- a/a2a/package.json
+++ b/a2a/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "testpwa": "vue-cli-service build && serve -s dist"
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^4.7.1",
@@ -14,6 +15,7 @@
     "firebase": "^8.6.7",
     "geofire-common": "^5.2.0",
     "mapbox-gl": "^1.13.1",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-plugin-eslint": "^4.5.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "^4.5.0",
     "babel-eslint": "^10.1.0",
