--- a/a2a/package.json
+++ b/a2a/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "testpwa": "vue-cli-service build && serve -s dist"
+    "serve": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build",
+    "lint": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service lint",
+    "testpwa": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build && serve -s dist"
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^4.7.1",
