--- a/admin/package.json
+++ b/admin/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 9000",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service serve --port 9000",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build",
+    "lint": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "firebase": "^8.6.5",
+    "firebase": "^8.6.7",
     "geofire-common": "^5.2.0",
     "mime-types": "^2.1.32",
     "vue": "^2.6.11",
@@ -18,12 +18,12 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.0",
+    "@vue/cli-plugin-eslint": "^4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "5",
+    "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.20.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
