--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,7 +17,12 @@ jobs:
           # It also emits such aliases as lts, latest, nightly and canary builds
           # Examples: 12.x, 10.15.1, >=10.15.0, lts/Hydrogen, 16-nightly, latest, node
           node-version: '20.x'
-      - run: cd a2a && yarn set version 3.3 && yarn install --pure-lockfile && yarn run build
+      - run: |
+          npm install -g corepack
+          corepack enable
+          cd a2a
+          yarn set version 3.3
+          yarn install --pure-lockfile && yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
@@ -37,7 +42,12 @@ jobs:
           # It also emits such aliases as lts, latest, nightly and canary builds
           # Examples: 12.x, 10.15.1, >=10.15.0, lts/Hydrogen, 16-nightly, latest, node
           node-version: '20.x'
-      - run: cd admin && yarn set version 3.3 && yarn install --pure-lockfile && yarn run build
+      - run: |
+          npm install -g corepack
+          corepack enable
+          cd admin
+          yarn set version 3.3
+          yarn install --pure-lockfile && yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACCESS2AG_7B67B }}'
