--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -22,7 +22,7 @@ jobs:
           corepack enable
           cd a2a
           yarn set version 3.3
-          yarn install --pure-lockfile && yarn run build
+          yarn install && yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
@@ -47,7 +47,7 @@ jobs:
           corepack enable
           cd admin
           yarn set version 3.3
-          yarn install --pure-lockfile && yarn run build
+          yarn install && yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_ACCESS2AG_7B67B }}'
