--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -24,7 +24,7 @@ jobs:
           corepack enable
           cd admin
           yarn set version 3.3
-          yarn install --pure-lockfile && yarn run build
+          yarn install && yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
@@ -49,7 +49,7 @@ jobs:
           corepack enable
           cd a2a
           yarn set version 3.3
-          yarn install --pure-lockfile && yarn run build
+          yarn install && yarn run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
